Fix color contrast for pseudo elements

--- a/assets/css/primary.css
+++ b/assets/css/primary.css
@@ -151,16 +151,19 @@ header .logo {
 #post1 {
 	background-image: url("../img/post1.jpg");
 	background-repeat: no-repeat;
+	background-color: black;
 }
 
 #post2 {
 	background-image: url("../img/post2.jpg");
 	background-repeat: no-repeat;
+	background-color: black;
 }
 
 #post3 {
 	background-image: url("../img/post3.jpg");
 	background-repeat: no-repeat;
+	background-color: black;
 }
 
 .card:hover {
@@ -548,6 +551,7 @@ header .logo {
 	#share-buttons img {
 		padding: 0px;
 	}
+
 	.share-text {
 		font-size: 10px;
 		text-align: left;
